c4prj2_input/grade.txt
Grading at Tue Sep  4 19:17:27 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c:4:2: error: invalid preprocessing directive #incdude
 #incdude "deck.h"
  ^
input.c: In function ‘read_input’:
input.c:10:3: error: ‘bla’ undeclared (first use in this function)
   bla;
   ^
input.c:10:3: note: each undeclared identifier is reported only once for each function it appears in
input.c:11:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
